@@ -56,8 +56,6 @@ export _JAVA_OPTIONS="-Xms${INITIALMEMORY}m -Xmx${MAXIMUMMEMORY}m -XX:-AlwaysPre
 CHPST=""
 if [ -n "$WEBHARE_IN_DOCKER" ]; then
   CHPST="chpst -u opensearch:opensearch:whdata "
-else
-  _JAVA_OPTIONS="$_JAVA_OPTIONS -Djava.security.manager=allow"    #linux opensearch 1.3.2 doesn't seem to like securitymanager anymore but brew does
 fi
 
 if [ -z "$WEBHARE_IN_DOCKER" ]; then
